--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="itemCreateButton">Create Item</string>
     <string name="itemStart">Showing information for\u0020</string>
     <string name="showAmount">Current amount:\u0020</string>
-    <string name="EditStock">Add/Remove Stock</string>
+    <string name="addStock">Add Stock</string>
+    <string name="delStock">Remove Stock</string>
     <string name="DeleteItem">Delete Item From Inventory</string>
 </resources>
