--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     <string name="delStock">Remove Stock</string>
     <string name="DeleteItem">Delete Item From Inventory</string>
     <string name="DialogDeleteWarning">Are you sure you want to delete this item?</string>
+    <string name="ItemAddedMessage">Item added successfully</string>
     <string name="askNumber">Please enter a value:</string>
 </resources>
