--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="DialogDeleteWarning">Are you sure you want to delete this item?</string>
     <string name="ItemAddedMessage">Item added successfully</string>
     <string name="askNumber">Please enter a value:</string>
+    <string name="integerError">ERROR: Valid number not given</string>
 </resources>
