--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="welcome_text">Welcome to the Warehouse Inventory System (WIT)</string>
     <string name="itemView_button">View Stock</string>
     <string name="addItemView_button">Add New Items</string>
-    <string name="stock_welcome_text">Here is your current stock</string>
+    <string name="stock_welcome_text">Current Stock</string>
     <string name="itemPageButton"><![CDATA[>]]></string>
     <string name="addItemMsg">Please input data for the new item:</string>
     <string name="descriptionText">Description</string>
