Created activity and supporting RecycleView adapter to select a specific inventory

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="loginMsg">Please log in:</string>
     <string name="logInButton">Log In</string>
     <string name="createAccountText">Create Account</string>
+    <string name="createAcctMsg">Please Input Data for User:</string>
+    <string name="inventoryText">Current Inventories</string>
 </resources>
