Created dialog box to add new inventories and added it to the Inventory view activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="createAccountText">Create Account</string>
     <string name="createAcctMsg">Please Input Data for User:</string>
     <string name="inventoryText">Current Inventories</string>
+    <string name="askName">Please enter a name:</string>
 </resources>
